--- a/nextjs-mypet/package.json
+++ b/nextjs-mypet/package.json
@@ -7,13 +7,16 @@
     "eslint": "eslint --fix ."
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.12",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
     "axios": "^1.1.2",
     "module-alias": "^2.2.2",
     "next": "latest",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   },
   "_moduleAliases": {
     "@components": "./components"
@@ -21,5 +24,9 @@
   "devDependencies": {
     "eslint": "^8.26.0",
     "eslint-plugin-react": "^7.31.10"
+  },
+  "peerDependencies": {
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   }
 }
