--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
         "dev": "cd nextjs-mypet && npm run dev",
         "build": "cd nextjs-mypet && npm run build",
         "start": "cd nextjs-mypet && npm run start"
+    },
+    "sada": {
+        
     }
 }
