--- a/nextjs-mypet/package.json
+++ b/nextjs-mypet/package.json
@@ -11,6 +11,7 @@
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.14",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.14",
     "axios": "^1.1.2",
     "module-alias": "^2.2.2",
